autotests/kdirwatch_unittest.cpp
@@ -112,6 +112,7 @@ private Q_SLOTS: // test methods
     void nestedEventLoop();
     void testHardlinkChange();
     void stopAndRestart();
+    void shouldIgnoreQrcPaths();
 
 protected Q_SLOTS: // internal slots
     void nestedEventLoopSlot();
@@ -747,6 +748,29 @@ void KDirWatch_UnitTest::stopAndRestart()
 
     QFile::remove(file2);
     QFile::remove(file3);
+}
+
+void KDirWatch_UnitTest::shouldIgnoreQrcPaths()
+{
+    const auto oldCwd = QDir::currentPath();
+    QVERIFY(QDir::setCurrent(QDir::homePath()));
+
+    KDirWatch watch;
+    watch.addDir(QDir::homePath());
+    // This triggers bug #374075.
+    watch.addDir(QStringLiteral(":/kio5/newfile-templates"));
+
+    QSignalSpy dirtySpy(&watch, &KDirWatch::dirty);
+
+    QFile file(QStringLiteral("bug374075.txt"));
+    QVERIFY(file.open(QIODevice::WriteOnly));
+    QVERIFY(file.write(QByteArrayLiteral("test")));
+    file.close();
+    QVERIFY(file.exists());
+    QVERIFY(dirtySpy.wait());
+    QVERIFY(dirtySpy.count() > 0);
+    QVERIFY(file.remove());
+    QVERIFY(QDir::setCurrent(oldCwd));
 }
 
 #include "kdirwatch_unittest.moc"
